# fluent_python_2e

./: README.md  dev.ipynb  faq.md  progress.md  pyproject.toml  thinking.md
01-data-model/: data-model.ipynb
02-array-seq/: array-seq.ipynb  dev.py
