[tool.poetry]
name = "example-code-2e"
version = "0.1.0"
description = ""
authors = ["sqjian <shengqi.jian@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
